- s/^Terminal=0/Terminal=false/ s/^Terminal=1/Terminal=true/ to conform   freedesktop.org desktop-entry specification
Changed files:
    armagetron.desktop -> 1.3

--- a/armagetron.desktop
+++ b/armagetron.desktop
@@ -3,7 +3,7 @@ Name=armagetron
 Comment=Tron lightcycle game
 Comment[pl]=Gra Tron ze światłocyklem 
 Exec=armagetron
-Terminal=0
+Terminal=false
 Icon=armagetron.png
 Type=Application
 Encoding=UTF-8
