- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    armagetron.desktop -> 1.6

--- a/armagetron.desktop
+++ b/armagetron.desktop
@@ -4,8 +4,7 @@ Comment=Tron lightcycle game
 Comment[pl]=Gra Tron ze światłocyklem 
 Exec=armagetron
 Terminal=false
-Icon=armagetron.png
+Icon=armagetron
 Type=Application
-Encoding=UTF-8
 Categories=Game;ArcadeGame;
 # vi: encoding=utf-8
